--- a/roles/mms/templates/automation-agent.config.j2
+++ b/roles/mms/templates/automation-agent.config.j2
@@ -2,14 +2,14 @@
 # REQUIRED
 # Enter your Group ID - It can be found at https://cloud.mongodb.com/settings/group
 #
-mmsGroupId=MMSGROUPID
+mmsGroupId=558a6b95e4b0c5f2bcb6dda3
 
 
 #
 # REQUIRED
 # Enter your API key - It can be found at https://cloud.mongodb.com/settings/group
 #
-mmsApiKey=MMSAPIKEY
+mmsApiKey=eeb066f023d833ac11b5c4c5338a6886
 
 
 #
