--- a/roles/mms/files/automation-agent.config.j2
+++ b/roles/mms/files/automation-agent.config.j2
@@ -2,14 +2,14 @@
 # REQUIRED
 # Enter your Group ID - It can be found at https://cloud.mongodb.com/settings/group
 #
-mmsGroupId=558a6b95e4b0c5f2bcb6dda3
+mmsGroupId=MMS_GROUP_ID
 
 
 #
 # REQUIRED
 # Enter your API key - It can be found at https://cloud.mongodb.com/settings/group
 #
-mmsApiKey=eeb066f023d833ac11b5c4c5338a6886
+mmsApiKey=MMS_API_KEY
 
 
 #
